<resources>
    <string name="app_name">Calender</string>

    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>

    <string-array name="custom_weekdays">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string-array name="custom_months">
        <item>1월</item>
        <item>2월</item>
        <item>3월</item>
        <item>4월</item>
        <item>5월</item>
        <item>6월</item>
        <item>7월</item>
        <item>8월</item>
        <item>9월</item>
        <item>10월</item>
        <item>11월</item>
        <item>12월</item>
    </string-array>
    <string name="account">Account Setting</string>
    <string name="notification">Notification Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="darkmode">DarkMode Setting</string>
    <string name="easymode">Easymode</string>
    <string name="normalmode">Normalmode</string>
    <string name="name_setting">Change Name</string>
    <string name="lightmode">Lightmode</string>
    <string name="back">BACK</string>
    <string name="Darkmode">Darkmode</string>
    <string name="birthday">Change Birth</string>
    <string name="notification_all">All Notification</string>
    <string name="Donotdisturb">Do-not-Disturb</string>
    <string name="current_normal">Current Mode: NORMAL</string>
    <string name="current_easy">Current Mode:EASY</string>
    <string name="Email">*Email</string>
    <string name="Email_insert">Please Insert Email</string>
    <string name="Password">*Password</string>
    <string name="Password_insert">Please Insert password</string>
    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="ID">*ID</string>
    <string name="ID_insert">Please Insert ID</string>
    <string name="id_duplicate">Please check the ID repeatedly</string>
    <string name="id_duplicate_check">Check ID duplicate</string>
    <string name="Password_re">*Password re</string>
    <string name="Password_re_insert">Please re insert Password</string>
    <string name="name">name</string>
    <string name="name_insert">Please insert name</string>
    <string name="phonenumber">PhoneNumber</string>
    <string name="phonenumber_insert">Please insert PhoneNumber</string>
    <string name="age">*age</string>
    <string name="age_insert">Please insert age</string>
    <string name="address">Adress</string>
    <string name="address_isnert">Please insert address</string>
    <string name="address_detail">Detailed address</string>
    <string name="address_detail_insert">Please insert detailed address</string>
    <string name="ZIP">ZIP Code</string>
    <string name="ZIP_INSERT">Please Insert ZIP Code</string>
    <string name="email_back">Last Email</string>
    <string name="register_complete">Complete Register</string>
    <string name="Setting">Setting</string>
    <string name="add_schedule">Add the Schedule</string>
    <string name="add_goal">Add goal!</string>
    <string name="list_title">List Title</string>
    <string name="list_title_not">List Not selected</string>
    <string name="list_time">List Time</string>
    <string name="list_content">List Content</string>
    <string name="list_content_not">List contet not added</string>
    <string name="delete">Delete</string>
    <string name="calender_big">Show Calender in BIg size</string>
    <string name="game">game</string>
    <string name="plz_login">login</string>
    <string name="topic">Topic</string>
    <string name="list_date">List Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="allday">All Day</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="restart">Restart</string>
    <string name="dark_follow">Follow the System</string>
    <string name="speak_list">Please Say contens</string>
    <string name="game_btn">GAME</string>
</resources>