<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/test">

    <TextView
        android:id="@+id/setting_dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/darkmode"
        android:textSize="50dp"
        android:textColor="@color/test1"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
       />

    <Button
        android:id="@+id/light_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/lightmode"
        android:textColor="@color/test1"
        android:textSize="30dp"
        android:background="@drawable/example1"
        android:layout_marginTop="100dp"
        />

    <Button
        android:id="@+id/dark_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/test1"
        android:text="@string/Darkmode"
        android:background="@drawable/exam"
        android:textSize="30dp"
        />
    <Button
        android:id="@+id/sys_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/test1"
        android:text="시스템 태마 따라가기"
        android:background="@drawable/exam"
        android:textSize="30dp"
        />
    <Button
        android:id="@+id/dark_back"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:textColor="@color/test1"
        android:background="@drawable/exam"
        android:text="@string/back"
        android:textSize="30dp"
        />
</LinearLayout>