<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F6"

    >
    <!--    -->
    <!--   이지모드 설정 쪽이다-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="Setting"
        android:textSize="30dp"
        android:textStyle="bold" />

    <!--    설정 버튼 화면 쪽이다-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/exam"
        >
        <!-- 계정 설정 버튼이다-->
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/example1"
            android:textSize="20dp"
            android:text="@string/account"/>
        <!-- 알림 설정 버튼이다-->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/example1"
            android:textSize="20dp"
            android:text="@string/notification"/>
        <!--언어 설정 버튼이다-->
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:background="@drawable/example1"
            android:text="@string/darkmode"/>
        <!--쿠폰 입력 버튼이다-->
        <!--문의사항 버튼이다-->
    </LinearLayout>
    <!-- 로그아웃 설정 버튼이다-->

    <!--로그아웃 버튼이다-->

</LinearLayout>