<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F6"

    >
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Setting"
        android:textSize="50dp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="410dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:srcCompat="@drawable/example1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:layout_alignBottom="@+id/imageView7"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="66dp"
            app:srcCompat="@drawable/unknown" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="150dp"
            android:layout_height="300dp"
            android:layout_alignBottom="@+id/imageView7"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="66dp"
            app:srcCompat="@drawable/unknown_1" />

        <RadioButton
            android:id="@+id/normalbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normalmode"
            android:translationX="50dp"
            android:translationY="340dp" />

        <RadioButton
            android:id="@+id/easybtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easymode"
            android:translationX="230dp"
            android:translationY="340dp" />

    </RelativeLayout>

<!--    설정 버튼 화면 쪽이다-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@drawable/exam"
        android:padding="5sp"
        >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/example1"
            android:drawableLeft="@drawable/ic_user_line"
            android:text="@string/account"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/notification_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/example1"
            android:drawableLeft="@drawable/ic_notification_line"
            android:text="@string/notification"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />
        <!--언어 설정 버튼이다-->
        <Button
            android:id="@+id/darkmode_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:background="@drawable/example1"
            android:drawableLeft="@drawable/ic_contrast_2_line"
            android:textAlignment="textStart"
            android:text="@string/darkmode"/>

        <!--쿠폰 입력 버튼이다-->
        <!--문의사항 버튼이다-->
    </LinearLayout>
    <!-- 로그아웃 설정 버튼이다-->
    <Button
        android:id="@+id/logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#FFFFFF"
        android:layout_marginTop="10dp"
        android:background="@drawable/example1"
        android:text="로그아웃"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:textSize="20sp" />

    <!--로그아웃 버튼이다-->

</LinearLayout>