<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F2F2F6"

    >
    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:paddingTop="10dp"
        android:src="@drawable/arrow_left_line"
        android:background="#f2f2f6"
        />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Setting"
        android:textSize="50dp"
        android:textAlignment="center"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="410dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:srcCompat="@drawable/example1" />

        <ImageButton
            android:id="@+id/normalbtn"
            android:layout_width="136dp"
            android:layout_height="270dp"
            android:layout_alignBottom="@+id/imageView7"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="85dp"
            android:background="#ffffff"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/unknown" />

        <ImageButton
            android:id="@+id/easybtn"
            android:layout_width="150dp"
            android:layout_height="279dp"
            android:layout_alignBottom="@+id/imageView7"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="76dp"
            android:background="@drawable/edge"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/unknown_1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="378dp"
            android:layout_height="54dp"
            android:layout_alignBottom="@+id/imageView7"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="9dp"
            android:text="@string/current_easy"
            android:textAlignment="center"
            android:textSize="30sp" />


    </RelativeLayout>

    <!--    설정 버튼 화면 쪽이다-->



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:orientation="vertical"
        android:background="@drawable/exam"
        android:padding="5sp"
        >

        <Button
            android:id="@+id/account_settingbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/example1"
            android:drawableLeft="@drawable/ic_user_line"
            android:text="@string/account"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/notificationsetting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/example1"
            android:drawableLeft="@drawable/ic_notification_line"
            android:text="@string/notification"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="20sp" />
        <!--언어 설정 버튼이다-->
        <Button
            android:id="@+id/darkmodesetting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="#000000"
            android:textSize="20dp"
            android:background="@drawable/example1"
            android:drawableLeft="@drawable/ic_contrast_2_line"
            android:textAlignment="textStart"
            android:text="@string/darkmode"/>

        <!--쿠폰 입력 버튼이다-->
        <!--문의사항 버튼이다-->
    </LinearLayout>
    <!-- 로그아웃 설정 버튼이다-->

    <!--로그아웃 버튼이다-->

</LinearLayout>